--- a/index.html
+++ b/index.html
@@ -108,8 +108,11 @@
         </div>
     </section>
 
-    <!-- <section class="competition">
-        <h2 class="section-title">比赛公告</h2>
+    <section class="competition">
+        <h2 class="section-title">
+            <img src="图标2.png" alt="比赛公告" class="section-icon">
+            比赛公告
+        </h2>
         <div class="container">
             <div class="competition-list">
                 <div class="competition-item">
@@ -126,7 +129,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
     <section class="about" id="about">
         <div class="container">
