--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container">
             <nav class="navbar">
                 <div class="logo">
-                    <a href="#"><img src="images/logo.png" alt="941code 标志"></a>
+                    <a href="#"><img src="logo.png" alt="941code 标志"></a>
                 </div>
                 <ul class="nav-links">
                     <li><a href="#home">首页</a></li>
@@ -45,7 +45,7 @@
         <div class="feature-cards">
             <div class="feature-card">
                 <div class="feature-icon">
-                    <img src="images/1.png" alt="互动式编程挑战" class="feature-img">
+                    <img src="/1.png" alt="互动式编程挑战" class="feature-img">
                 </div>
                 <div class="feature-text">
                     <h3>互动式编程挑战</h3>
@@ -54,7 +54,7 @@
             </div>
             <div class="feature-card">
                 <div class="feature-icon">
-                    <img src="images/2.png" alt="全面的学习路径" class="feature-img">
+                    <img src="2.png" alt="全面的学习路径" class="feature-img">
                 </div>
                 <div class="feature-text">
                     <h3>全面的学习路径</h3>
@@ -63,7 +63,7 @@
             </div>
             <div class="feature-card">
                 <div class="feature-icon">
-                    <img src="images/3.png" alt="社区支持" class="feature-img">
+                    <img src="/3.png" alt="社区支持" class="feature-img">
                 </div>
                 <div class="feature-text">
                     <h3>编程能力画像</h3>
@@ -72,7 +72,7 @@
             </div>
             <div class="feature-card">
                 <div class="feature-icon">
-                    <img src="images/4.png" alt="可视化调试" class="feature-img">
+                    <img src="4.png" alt="可视化调试" class="feature-img">
                 </div>
                 <div class="feature-text">
                     <h3>可视化调试</h3>
@@ -84,7 +84,7 @@
 
     <section class="practice">
         <h2 class="section-title">
-            <img src="images/图标2.png" alt="在线练习" class="section-icon">
+            <img src="图标2.png" alt="在线练习" class="section-icon">
             在线练习
         </h2>
         <div class="container">
@@ -110,7 +110,7 @@
 
     <section class="competition">
         <h2 class="section-title">
-            <img src="images/图标2.png" alt="比赛公告" class="section-icon">
+            <img src="图标2.png" alt="比赛公告" class="section-icon">
             比赛公告
         </h2>
         <div class="container">
@@ -161,7 +161,7 @@
         <div class="footer-content">
             <!-- Logo部分 -->
             <div class="footer-logo">
-                <img src="images/logo.png" alt="941code">
+                <img src="logo.png" alt="941code">
                 <p class="logo-text">www.941code.com</p>
             </div>
 
