--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="feature-cards">
             <div class="feature-card">
                 <div class="feature-icon">
-                    <img src="/1.png" alt="互动式编程挑战" class="feature-img">
+                    <img src="1.png" alt="互动式编程挑战" class="feature-img">
                 </div>
                 <div class="feature-text">
                     <h3>互动式编程挑战</h3>
@@ -63,7 +63,7 @@
             </div>
             <div class="feature-card">
                 <div class="feature-icon">
-                    <img src="/3.png" alt="社区支持" class="feature-img">
+                    <img src="3.png" alt="社区支持" class="feature-img">
                 </div>
                 <div class="feature-text">
                     <h3>编程能力画像</h3>
